Add .css file to bower.json

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,10 @@
     "Cory LaViska"
   ],
   "description": "jQuery MiniColors Plugin",
-  "main": "./jquery.minicolors.js",
+  "main": [
+    "./jquery.minicolors.js",
+    "./jquery.minicolors.css"
+  ]
   "keywords": [
     "jquery",
     "colorpicker"
