--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jquery-minicolors",
-  "version": "2.2.3",
+  "name": "@claviska/jquery-minicolors",
+  "version": "2.2.4",
   "homepage": "https://github.com/claviska/jquery-minicolors",
   "author": "Cory LaViska",
   "description": "jQuery MiniColors Plugin",
