--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "dependencies": {
     "jquery": ">= 1.7.x"
   },
+  "devDependencies": {
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-help": "^1.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/claviska/jquery-minicolors.git"
