fix: rebuild .min.js file
Added build and watch scripts for easiness

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/claviska/jquery-minicolors/issues"
   },
-  "scripts": {}
+  "scripts": {
+    "build": "gulp",
+    "watch": "gulp watch"
+  }
 }
