--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "jquery": ">= 1.7.x"
   },
   "devDependencies": {
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-help": "^1.6.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^1.5.3"
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
+    "uglify-save-license": "^0.4.1"
   },
   "repository": {
     "type": "git",
