--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,11 @@
 {
   "name": "jquery-minicolors",
-  "version": "2.3.5",
+  "version": "2.3.6",
   "homepage": "https://github.com/claviska/jquery-minicolors",
-  "authors": [
-    "Cory LaViska"
-  ],
+  "authors": ["Cory LaViska"],
   "description": "jQuery MiniColors Plugin",
-  "main": [
-    "./jquery.minicolors.js",
-    "./jquery.minicolors.css"
-  ],
-  "keywords": [
-    "jquery",
-    "colorpicker"
-  ],
+  "main": ["./jquery.minicolors.js", "./jquery.minicolors.css"],
+  "keywords": ["jquery", "colorpicker"],
   "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+  "ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"]
 }
